log
Sun Mar 13 12:21:01 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
8fbadfa
Sun Mar 13 12:27:53 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
50c337e
Sun Mar 13 12:36:25 UTC 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
579c97e
Sun Mar 13 12:40:15 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:79:30: error: implicit declaration of function ‘sixeof’; did you mean ‘sinhf’? [-Werror=implicit-function-declaration]
   int *vector=(int*)calloc(n,sixeof(int));
                              ^~~~~~
                              sinhf
exercises.c:79:37: error: expected expression before ‘int’
   int *vector=(int*)calloc(n,sixeof(int));
                                     ^~~
exercises.c:80:11: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return vector;
           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bb32647
Sun Mar 13 12:40:29 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:80:11: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return vector;
           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
c074b69
Sun Mar 13 12:40:55 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
1d2b36c
Sun Mar 13 12:43:00 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|3
total_score: 40/70
00b075c
Sun Mar 13 12:44:21 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:91:4: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   *vector[i]=valor;
    ^~~~~~
    Vector
exercises.c:91:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3593bb9
Sun Mar 13 12:44:32 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:91:3: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   vector[i]=valor;
   ^~~~~~
   Vector
exercises.c:91:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d8723b5
Sun Mar 13 12:44:44 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:91:7: error: incompatible types when assigning to type ‘Vector {aka struct <anonymous>}’ from type ‘int’
   v[i]=valor;
       ^
Compilation failed
0a62c6f
Sun Mar 13 12:45:52 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
228a6d4
Sun Mar 13 12:47:10 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘obtenerValor’:
exercises.c:101:3: error: unknown type name ‘retur’; did you mean ‘Vector’?
   retur aux;
   ^~~~~
   Vector
exercises.c:101:9: error: redeclaration of ‘aux’ with no linkage
   retur aux;
         ^~~
exercises.c:100:7: note: previous definition of ‘aux’ was here
   int aux=(v->datos[i]);
       ^~~
exercises.c:101:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   retur aux;
         ^~~
cc1: all warnings being treated as errors
Compilation failed
b7323a8
Sun Mar 13 12:47:23 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
e6b5f93
